# PatchcoreBackend

./: .env.example  .gitignore  .markdownlint.json  README.md  api-docs-my-project.html  api_test.py  benchmark.ps1  index.py  launch_settings_gui.ps1  model_create_gui.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  restart_engine.ps1  server_launch.ps1  server_launch.sh
.github/: copilot-instructions.md
docs/: API.md  API_SETTINGS.md  ENV_GUIDE.md  GUI_ENHANCEMENT_PROPOSAL.md  GUI_GUIDE.md  INDEX.md  SECURITY.md  SERVER_GUIDE.md  SETTINGS_GUIDE.md  VALIDATION_FEATURE.md
scripts/: benchmark.ps1  launch_settings_gui.ps1  restart_engine.ps1  server_launch.ps1  server_launch.sh  test_gui.ps1  test_paths.ps1
settings/: main_settings.py
settings/models/example_model/: settings.py
src/: types.py
src/api/client/: patchcore_api_client.py
src/api/core/: patchcore_api.py
src/api/routers/: images.py  jobs.py  models.py  system.py
src/api/services/: job_queue.py  model_registry.py
src/api/utils/: api_util.py
src/config/: constants.py  env_loader.py  settings_loader.py
src/ml_engine/core/: inference_core.py  inference_engine.py
src/ml_engine/pipeline/: create.py  inference.py
src/ml_engines/PatchCore/core/: inference_core.py  inference_engine.py
src/model/core/: inference_core.py  inference_engine.py
src/model/pipeline/: _inference.py  create.py  inference.py
src/model/utils/: device_utils.py  inference_utils.py  model_loader.py
src/ui/: env_gui_editor.py  main_gui_launcher.py  projection_point_selector.py  settings_gui_editor.py
src/utils/: logger.py
tests/: README.md  api_test.py  benchmark_test.py  gpu_check.py  predict_test.py  test_settings_loader.py  validate_settings.py
(+6 files in other folders)
